# medical-assistant-chatbot

./: README.md
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml
backend/app/: .env.template  main.py
backend/app/business/: dependencies.py
backend/app/business/agents/: fhir_formatter_agent.py  fhir_retriever_agent.py  fhir_translator_agent.py
backend/app/business/clients/: fhir_client.py  llm_client.py  pubmed_retriever_client.py  retriever_client.py
backend/app/business/schemas/: fhir_translator_agent.py  llm_response.py  medical_qa_assistant.py
backend/app/business/services/: conditions_service.py  encounters_service.py  orchestrator_service.py  patients_service.py
backend/app/business/templates/v1/: medical_qa_template.py
backend/app/business/templates/v2/: medical_qa_template.py  patient_qa_template.py
backend/app/business/tools/: fhir_tools.py
backend/app/config/: logger.py  settings.py
backend/app/data/models/enums/: role.py
backend/app/presentation/: dependencies.py
backend/app/presentation/routers/: health.py
backend/app/presentation/routers/v1/: conditions.py  encounters.py  medical_qa_assistant.py  patients.py
backend/app/presentation/schemas/: medical_qa_assistant.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  globals.css  index.css  main.tsx
frontend/src/components/: chat-input.tsx  (+2 more)
infrastructure/: .gitignore
infrastructure/hapi-fhir-server/: .env.template  docker-compose.yml  hapi.application.yaml
rag-pipeline/: .gitignore
(+39 files in other folders)
