[project]
name = "backend"
version = "0.0.1"
description = "Medical Q&A Assistant Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.23",
    "langchain-aws>=0.2.19",
    "loguru>=0.7.3",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
]
